hphp/test/slow/ext_asio/backtrace.php.expectf
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)
bool(true)

Catchable fatal error: Argument 1 passed to HH\Asio\backtrace() must be an instance of HH\Awaitable, CatWrapper given in %s on line 112
